# netchat

./: .env  .gitignore  Cargo.toml  README.md  README_en.md  README_zh.md  run.sh
examples/: get_gemini.rs  get_glm.rs  get_openai.rs  get_qwen.rs  get_qwen_vl.rs
src/: ai_chat.rs  auth.rs  lib.rs  logger.rs  main.rs
src/model/: gemini.rs  glm.rs  mod.rs  openai.rs  qwen.rs  qwen_vl.rs
src/routes/: chat.rs  login.rs  middleware.rs  mod.rs  router.rs  upload.rs  ws.rs
src/service/: assistant.rs  context.rs  mime.rs  mod.rs
static/: chat.html  login.html
static/css/: chat.css  login.css
static/js/: chat.js  login.js
uploads/: README.md
