[package]
name = "netchat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
async-openai = "0.18"
jsonwebtoken = "9.2"
dotenv = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }
