[package]
name = "netchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow ={version = "1.0"}
base64 = {version = "0.22.1"}
axum = { version = "0.8.1", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version ="1.0"}
futures = {version ="0.3"}
tokio-util = { version = "0.7", features = ["io"] }
async-openai = {version = "0.26.0"}
jsonwebtoken = {version = "9.2"}
dotenv = {version = "0.15"}
reqwest= {version = "0.12.2"}
axum-extra = { version = "0.10", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }